--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -5,13 +5,13 @@ date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
 ---
 
-```{r, include = FALSE, echo = FALSE}
-knitr::opts_chunks$set(echo = F, warning = F, message = F, comment = "")
+```{r, include = FALSE, echo = FALSE, message = FALSE, warning = FALSE}
+library(knitr)
+knitr::opts_chunk$set(echo = F, warning = F, message = F, comment = "")
 ```
 
 ```{r load_library}
 ## CRAN
-library(knitr)
 library(locfit)
 library(parallel)
 library(R2HTML)
@@ -34,7 +34,7 @@ source("atacseeker.R")
 
 ```{r setup_out_scratch}
 ## Defining Output and Scratch directories.
-test = FALSE
+test = T
 
 source("parse_AppSession.R")
 app_session_name = gsub('/','-', app_session_name)
