--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -55,6 +55,7 @@ if (!test)
         file = "atacseeker.sh", append=TRUE)  
 
 cleanMem <- function(n=10) { for (i in 1:n) gc(T,T) }
+collectGarbage <- 
 ```
 
 ```{r setup_var_input}
@@ -314,6 +315,12 @@ if (do_QC){
 }
 ```
 
+```{r mem_clean_up_zero}
+rm(list = c("chr1_5primeCuts", "collected", "combinedQC", "compareQC", "controlQC", "maxed", 
+    "nonTSS.bamCounts", "nonTssWindows", "rwsms", "TSS.bamCounts", "tssWindows", "wincounts", "windowed", "x"))
+collectGarbage()
+```
+
 ## CSAW Parameters ##
 
 Read extraction parameters:
@@ -324,6 +331,8 @@ window.width <- win.width
 data <- windowCounts(bam.files, width = window.width, param = discard.se.param, ext=1)
 binned <- windowCounts(bam.files, bin=TRUE, width=1000, param=discard.se.param)
 cat(paste("\tWindow width for counting reads is", window.width))
+
+collectGarbage()
 ```
 
 ## Filtering ##
@@ -480,6 +489,7 @@ rm(list=setdiff(ls(),
     "compute_library_complexity", "generate_BigWigs", "do_motif_analysis", 
     "data", "binned", "y", "is.sig", "diffAccRanges")))
 cleanMem()
+collectGarbage()
 ```
 
 ```{r export_files}
@@ -515,6 +525,7 @@ rm(list=setdiff(ls(),
     "compute_library_complexity", "generate_BigWigs", "do_motif_analysis", 
     "is.sig", "diffAccRanges")))
 cleanMem()
+collectGarbage()
 ```
 
 In addition, if requested, we also output the the coverage of the `bam` files in bigwig format. These along with the above `bed` file can be used for visualisation in the <a href="https://basespace.illumina.com/apps/1886885/Integrative-Genomics-Viewer" target="_blank"> IGV </a> browser. 
