--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -33,8 +33,10 @@ source("atacseeker.R")
 ```
 
 ```{r setup_out_scratch}
+system("ulimit")
+system("free")
 ## Defining Output and Scratch directories.
-test = T
+test = F
 
 source("parse_AppSession.R")
 app_session_name = gsub('/','-', app_session_name)
@@ -316,12 +318,14 @@ if (do_QC){
 ```
 
 ```{r mem_clean_up_zero}
+system("free")
 if (do_QC){
     rm(list = c("chr1_5primeCuts", "collected", "combinedQC", "compareQC", "controlQC", "maxed", "x", 
     "nonTSS.bamCounts", "nonTssWindows", "rwsms", "TSS.bamCounts", "tssWindows", "wincounts", "windowed"))
 }
 cleanMem()
 collectGarbage()
+system("free")
 ```
 
 ## CSAW Parameters ##
@@ -336,6 +340,14 @@ binned <- windowCounts(bam.files, bin=TRUE, width=1000, param=discard.se.param)
 cat(paste("\tWindow width for counting reads is", window.width))
 
 collectGarbage()
+system("free")
+```
+
+```{r mem_clean_up_pt5}
+system("free")
+cleanMem()
+collectGarbage()
+system("free")
 ```
 
 ## Filtering ##
@@ -487,12 +499,14 @@ The annotation is performed using the `detailRanges` function of `csaw`. The fun
 Features in flanking regions of the region of interest are also reported. These features are formatted with the same scheme as above except with an extra `[DISTANCE]` field, which represents the distance between the feature and the region of interest. Only those flanking features which are within 5kbp of each region are considered.
 
 ```{r mem_clean_up_one}
+system("free")
 rm(list=setdiff(ls(),
     c("test", "dump_dir", "output_dir", "dedup", "bam.files", "cleanMem", "collectGarbage",
     "compute_library_complexity", "generate_BigWigs", "do_motif_analysis", "data", "binned", 
     "y", "is.sig", "diffAccRanges")))
 cleanMem()
 collectGarbage()
+system("free")
 ```
 
 ```{r export_files}
@@ -523,12 +537,14 @@ cat(paste0("mv ", file.path(dump_dir, "csaw_edgeR_objects.Rda"), " '", output_di
 ```
 
 ```{r mem_clean_up_two}
+system("free")
 rm(list=setdiff(ls(),
     c("test", "dump_dir", "output_dir", "dedup", "bam.files", "cleanMem",
     "compute_library_complexity", "generate_BigWigs", "do_motif_analysis", 
     "is.sig", "diffAccRanges")))
 cleanMem()
 collectGarbage()
+system("free")
 ```
 
 In addition, if requested, we also output the the coverage of the `bam` files in bigwig format. These along with the above `bed` file can be used for visualisation in the <a href="https://basespace.illumina.com/apps/1886885/Integrative-Genomics-Viewer" target="_blank"> IGV </a> browser. 
