--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -217,7 +217,7 @@ if (do_QC){
 
         # use mcmapply(), but only if we haven't already...
         if (!file.exists("controlQC.rds")) {
-            controlQC <- mcmapply(getQC, name=control, pe.bam=control.files, SIMPLIFY=F)
+            controlQC <- mapply(getQC, name=control, pe.bam=control.files, SIMPLIFY=F)
             if(test)
                 saveRDS(controlQC, "controlQC.rds")
         } else { 
@@ -225,7 +225,7 @@ if (do_QC){
         }
 
         if (!file.exists("compareQC.rds")) {
-            compareQC <- mcmapply(getQC, name=compare, pe.bam=compare.files, SIMPLIFY=F)
+            compareQC <- mapply(getQC, name=compare, pe.bam=compare.files, SIMPLIFY=F)
             if(test)
                 saveRDS(compareQC, file="compareQC.rds")  
         } else { 
