--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -82,7 +82,7 @@ compare.files = tmp$group.files
 bam.in = c(control.in, compare.in)
 bam.files = c(control.files, compare.files)
 if (!test){
-    tmp <- mapply(file.copy, bam.in, bam.files)
+    tmp <- mapply(file.symlink, bam.in, bam.files)
     tmp <- mapply(indexBam, bam.files)
 }
 
