--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -72,16 +72,10 @@ if(test){
 }
 
 tmp <- get_bams(controlID, controlName)
-control.in = tmp$group.in
-control.files = tmp$group.files
+control.files = tmp$group.in
 compares <- get_bams(compareID, compareName)
-compare.in = tmp$group.in
-compare.files = tmp$group.files
-bam.in = c(control.in, compare.in)
+compare.files = tmp$group.in
 bam.files = c(control.files, compare.files)
-tmp <- mapply(file.symlink, bam.in, bam.files)
-tmp <- mapply(indexBam, bam.files)
-
 margin = max(sapply(samples, nchar))
 mars = c(max(margin / 1.8, 5), 4, 4, 0.9) + 0.1
 ```
