--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -169,16 +169,27 @@ if (do_QC){
     barplot(chrMvsOther[num_control+1:num_samples], col = "red", xlim = c(0,1), width = 1/(num_compare+1), 
         main = compare.label, ylim = c(0, ylim), las=3, cex.names = 0.8)
 
-    proms <- promoters(Homo.sapiens, upstream=2000, downstream=2000) # for hg19
-    # wincounts <- windowCounts(bam.files,  shift=4, bin=TRUE, param=discard.se.param)
+    # set up the disjoin() on 5k and 10k, then we will drop out the windows w/in 5k 
+    standardChroms <- paste0("chr", c(1:22,"X","Y"))
+    proms5k <- promoters(Homo.sapiens, up=5000, down=5000)
+    proms10k <- promoters(Homo.sapiens, up=10000, down=10000)
+    
+    # TSS distal (5kb-10kb)
+    tss5k10k <- keepSeqlevels(trim(disjoin(c(proms10k, proms5k))), standardChroms)
+    tss5k10k <- unique(tss5k10k[-queryHits(findOverlaps(tss5k10k, proms5k))])
+    stopifnot(length(findOverlaps(tss5k10k, proms5k)) == 0) # ensure we got 'em all
+
+    # TSS proximal
+    tss2k <- unique(keepSeqlevels(trim(promoters(Homo.sapiens,up=2000,down=2000)),
+                                  standardChroms))
+
+    # get bam counts 
     wincounts <- windowCounts(bam.files, bin=TRUE, param=discard.se.param)
-
-    tssWindows <- queryHits(findOverlaps(wincounts, proms))
-    nonTssWindows <- setdiff(seq_len(nrow(wincounts)), tssWindows)
-
+    tssWindows <- queryHits(findOverlaps(wincounts, tss2k))
+    nonTssWindows <- queryHits(findOverlaps(wincounts, tss5k10k))
     TSS.bamCounts <- colSums(assays(wincounts[tssWindows,])$counts)
     nonTSS.bamCounts <- colSums(assays(wincounts[nonTssWindows,])$counts)
-    TSSvsNonTSS <- TSS.bamCounts / nonTSS.bamCounts # ideally > 10...
+    TSSvsNonTSS <- TSS.bamCounts / nonTSS.bamCounts
     names(TSSvsNonTSS) <- samples
     ylim = 1.1*max(TSSvsNonTSS)
 
@@ -256,8 +267,8 @@ if (FALSE){
 
     ## Should parallelize ? 
     for (curbam in bam.files) {
-    ##    windowed <- windowCounts(curbam, spacing=150, width=150, param=discard.se.param, filter=20, ext=1)
-    ##    windowed <- windowCounts(curbam, ext=0, shift=4, bin=TRUE, param=discard.se.param)
+        ##    windowed <- windowCounts(curbam, spacing=150, width=150, param=discard.se.param, filter=20, ext=1)
+        ##    windowed <- windowCounts(curbam, ext=0, shift=4, bin=TRUE, param=discard.se.param)
         windowed <- windowCounts(curbam, spacing=150, width=150, param=discard.se.param, filter=20, ext=NA)
         rwsms <- rowSums(assay(windowed))
         maxed <- findMaxima(rowRanges(windowed), range=1000, metric=rwsms)
